log
mi., 26 de mar. de 2025  9:07:09: 
 tests:  0|6
total_score: 0/70
25021aa
mi., 26 de mar. de 2025  9:07:22: 
 tests:  0|6
total_score: 0/70
c88d66d
mi., 26 de mar. de 2025  9:07:39: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:34:9: error: 'List {aka struct List}' has no member named 'size'
     list->size=0 ;
         ^~
Compilation failed
46f462d
mi., 26 de mar. de 2025  9:12:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c50bffa
mi., 26 de mar. de 2025  9:20:07: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
75c938a
